# Sportify-Spots

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MEMBERSHIP_INDEX.html  MEMBERSHIP_README.md  QUICK_REFERENCE.txt  README.md  admin-cli.js  admin.html  ground-details.html  grounds.html  index.html  login.html  manage-grounds.html  manage-users.html  membership-checkout.html  membership.html  my-bookings.html  package-lock.json  package.json  profile.html  server.js  services.html  setup.bat  setup.sh  signup.html  test.js  view-bookings.html
Public/css/: auth.css  chatbot.css  grounds.css  index.css
Public/js/: auth-check.js  chatbot.js  supabase-config.js
api/: index.js
backend/: app.py  pyproject.toml  requirements.txt
views/: MEMBERSHIP_INDEX.html  admin.html  ground-details.html  grounds.html  index.html  login.html  manage-grounds.html  manage-users.html  membership-checkout.html  membership-dashboard.html  membership.html  my-bookings.html  profile.html  services.html  signup.html  view-bookings.html
